--- a/Código/03 - bikcraft/index.html
+++ b/Código/03 - bikcraft/index.html
@@ -179,10 +179,10 @@
       </ul>
       <div class="footer-redes">
         <a href="./">
-          <img src="img/icones/redes sociais/Facebook.svg" alt="Facebook">
+          <img src="img/icones/redes sociais/Youtube.svg" alt="Youtube">
         </a>
         <a href="./">
-          <img src="img/icones/redes sociais/Youtube.svg" alt="Youtube">
+          <img src="img/icones/redes sociais/Facebook.svg" alt="Facebook">
         </a>
         <a href="./">
           <img src="img/icones/redes sociais/Instagram.svg" alt="Instagram">
@@ -198,7 +198,7 @@
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contato.html">Contato</a></li>
-          <li><a href="./temos.html">Termos e Condições</a></li>
+          <li><a href="./termos.html">Termos e Condições</a></li>
         </ul>
       </nav>
     </div>
