Adicionando todas as Bicicletas

--- a/Código/03 - bikcraft/bicicletas/nebula.html
+++ b/Código/03 - bikcraft/bicicletas/nebula.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nimbus Stark | Bikcraft</title>
-  <meta name="description" content="A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.">
+  <title>Nebula Cosmic | Bikcraft</title>
+  <meta name="description" content="A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.">
   <link rel="icon" href="../favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="../css/style.css">
   
@@ -30,19 +30,19 @@
 
   <main class="titulo-bg">
       <div class="titulo container">
-        <p class="font-2-xl c5">R$ 4999</p>
-        <h1 class="font-1-xxl w">Nimbus Stark<span class="p1">.</span><h1>
+        <p class="font-2-xl c5">R$ 3999</p>
+        <h1 class="font-1-xxl w">Nebula Cosmic<span class="p1">.</span><h1>
     </div>
 
     <div class="bicicleta">
       <div class="bicicleta-img">
+        <img src="../img/bicicleta/nebula-560.jpg" alt="">
         <img src="../img/bicicleta/nimbus-560.jpg" alt="">
         <img src="../img/bicicleta/might-560.jpg" alt="">
-        <img src="../img/bicicleta/nebula-560.jpg" alt="">
       </div>
 
       <div class="bicicleta-conteudo">
-        <p class="font-2-l c5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <p class="font-2-l c5">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
           <a class="botao" href="../orçamento">Comprar agora</a>
           <span class="font-1-xs c6"><img src="../img/icones/dec/entrega.svg" alt=""> entrega em 5 dia</span>
@@ -60,7 +60,7 @@
 
         <li>
           <img src="../img/icones/vantagens/velocidade.svg" alt="">
-          <h3 class="font-1-m w">50km/h</h3>
+          <h3 class="font-1-m w">45km/h</h3>
           <p class="font-2-xs c5">A mais rápida bicicleta elétrica disponível hoje no mercado</p>
         </li>
 
@@ -100,11 +100,11 @@
         </li>
         
       </a>
-      <a href="./nebula.html">
+      <a href="./nimbus.html">
         <li>
-          <img src="../img/bicicleta/nebula-560.jpg" alt="">
-          <h3 class="font-1-xl">Nebula Cosmic</h3>
-          <span class="font-2-m c8">R$ 3999</span>
+          <img src="../img/bicicleta/nimbus-560.jpg" alt="">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
+          <span class="font-2-m c8">R$ 4999</span>
         </li>
         
       </a>
