--- a/Código/03 - bikcraft/index.html
+++ b/Código/03 - bikcraft/index.html
@@ -47,7 +47,7 @@
   <article class="bicicletas-lista">
     <h2 class="font-1-xxl container">escolha a sua<span class="p1">.</span></h2>
     <ul>
-      <a href="./bicicletas/magic">
+      <a href="./bicicletas/magic.html">
         <li>
           <img src="img/bicicleta/magic-home.jpg" alt="">
           <h3 class="font-1-xl">Magic Might</h3>
@@ -55,7 +55,7 @@
         </li>
         
       </a>
-      <a href="./bicicletas/nimbus">
+      <a href="./bicicletas/nimbus.html">
         <li>
           <img src="img/bicicleta/nimbus-home.jpg" alt="">
           <h3 class="font-1-xl">Nimbus Stark</h3>
@@ -63,7 +63,7 @@
         </li>
         
       </a>
-      <a href="./bicicletas/nebula">
+      <a href="./bicicletas/nebula.html">
         <li>
           <img src="img/bicicleta/nebula-home.jpg" alt="">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
