--- a/Código/03 - bikcraft/bicicletas.html
+++ b/Código/03 - bikcraft/bicicletas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,14 @@
   <title>Bicicletas | Bikcraft</title>
   <meta name="description" content="Bicicletas Elétricas">
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
- 
+
 <body id="bicicletas">
   <header class="header-bg">
     <div class="header container">
@@ -36,35 +38,35 @@
       </div>
     </div>
 
-      <div class="bicicletas container">
-        <div class="bicicletas-img">
-          <img src="./img/bicicleta/nimbus.jpg" alt="Bicicleta preta">
-          <span class="font-2-m w">R$ 4999</span>
-        </div>
-        <div class="bicicletas-conteudo">
-          <h2 class="font-1-xl ">Nimbus Stark</h2>
-          <p class="font-2-s c9">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-          <ul class="font-1-m c10">
-            <li>
-              <img src="./img/icones/vantagens/eletrica.svg" alt="">
-              Motor Elétrico
-            </li>
-            <li>
-              <img src="./img/icones/vantagens/carbono.svg" alt="">
-              Fibra de Carbono
-            </li>
-            <li>
-              <img src="./img/icones/vantagens/velocidade.svg" alt="">
-              50 km/h
-            </li>
-            <li>
-              <img src="./img/icones/vantagens/rastreador.svg" alt="">
-              Rastreador
-            </li>
-          </ul>
-          <a href="./bicicletas/nimbus.html" class="botao seta">SAIBA MAIS</a>
-        </div>
+    <div class="bicicletas container">
+      <div class="bicicletas-img">
+        <img src="./img/bicicleta/nimbus.jpg" alt="Bicicleta preta">
+        <span class="font-2-m w">R$ 4999</span>
       </div>
+      <div class="bicicletas-conteudo">
+        <h2 class="font-1-xl ">Nimbus Stark</h2>
+        <p class="font-2-s c9">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <ul class="font-1-m c10">
+          <li>
+            <img src="./img/icones/vantagens/eletrica.svg" alt="">
+            Motor Elétrico
+          </li>
+          <li>
+            <img src="./img/icones/vantagens/carbono.svg" alt="">
+            Fibra de Carbono
+          </li>
+          <li>
+            <img src="./img/icones/vantagens/velocidade.svg" alt="">
+            50 km/h
+          </li>
+          <li>
+            <img src="./img/icones/vantagens/rastreador.svg" alt="">
+            Rastreador
+          </li>
+        </ul>
+        <a href="./bicicletas/nimbus.html" class="botao seta">SAIBA MAIS</a>
+      </div>
+    </div>
 
 
     <div class="bicicletas-bg">
@@ -100,40 +102,40 @@
     </div>
 
 
-      <div class="bicicletas container">
-        <div class="bicicletas-img">
-          <img src="./img/bicicleta/nebula.jpg" alt="Bicicleta preta">
-          <span class="font-2-m w">R$ 3999</span>
-        </div>
-        <div class="bicicletas-conteudo">
-          <h2 class="font-1-xl ">Nebula Cosmic</h2>
-          <p class="font-2-s c9">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-          <ul class="font-1-m c10">
-            <li>
-              <img src="./img/icones/vantagens/eletrica.svg" alt="">
-              Motor Elétrico
-            </li>
-            <li>
-              <img src="./img/icones/vantagens/carbono.svg" alt="">
-              Fibra de Carbono
-            </li>
-            <li>
-              <img src="./img/icones/vantagens/velocidade.svg" alt="">
-              45 km/h
-            </li>
-            <li>
-              <img src="./img/icones/vantagens/rastreador.svg" alt="">
-              Rastreador
-            </li>
-          </ul>
-          <a href="./bicicletas/nebula.html" class="botao seta">SAIBA MAIS</a>
-        </div>
+    <div class="bicicletas container">
+      <div class="bicicletas-img">
+        <img src="./img/bicicleta/nebula.jpg" alt="Bicicleta preta">
+        <span class="font-2-m w">R$ 3999</span>
       </div>
+      <div class="bicicletas-conteudo">
+        <h2 class="font-1-xl ">Nebula Cosmic</h2>
+        <p class="font-2-s c9">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <ul class="font-1-m c10">
+          <li>
+            <img src="./img/icones/vantagens/eletrica.svg" alt="">
+            Motor Elétrico
+          </li>
+          <li>
+            <img src="./img/icones/vantagens/carbono.svg" alt="">
+            Fibra de Carbono
+          </li>
+          <li>
+            <img src="./img/icones/vantagens/velocidade.svg" alt="">
+            45 km/h
+          </li>
+          <li>
+            <img src="./img/icones/vantagens/rastreador.svg" alt="">
+            Rastreador
+          </li>
+        </ul>
+        <a href="./bicicletas/nebula.html" class="botao seta">SAIBA MAIS</a>
+      </div>
+    </div>
 
-    
-    
+
+
   </main>
-  
+
 
 
   <footer class="footer-bg">
@@ -149,18 +151,18 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="img/icones/redes sociais/Youtube.svg" alt="Youtube">
+            <img src="img/icones/redes-sociais/Youtube.svg" alt="Youtube">
           </a>
           <a href="./">
-            <img src="img/icones/redes sociais/Facebook.svg" alt="Facebook">
+            <img src="img/icones/redes-sociais/Facebook.svg" alt="Facebook">
           </a>
           <a href="./">
-            <img src="img/icones/redes sociais/Instagram.svg" alt="Instagram">
+            <img src="img/icones/redes-sociais/Instagram.svg" alt="Instagram">
           </a>
-  
+
         </div>
       </div>
-  
+
       <div class="footer-informacoes">
         <h3 class="font-2-l-b w">Informações</h3>
         <nav>
@@ -172,13 +174,14 @@
           </ul>
         </nav>
       </div>
-      <p class="footer-copy font-2-m c7">Bikcraft ©  Alguns Direitos Reservados</p>
+      <p class="footer-copy font-2-m c7">Bikcraft © Alguns Direitos Reservados</p>
     </div>
-  
+
   </footer>
 
 </body>
- 
- 
+
+
 <script src="js.js"></script>
+
 </html>
