--- a/Código/03 - bikcraft/termos.html
+++ b/Código/03 - bikcraft/termos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,14 @@
   <title>Termos e Condições | Bikcraft</title>
   <meta name="description" content="Termos e Condições.">
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
- 
+
 <body id="termos">
   <header class="header-bg">
     <div class="header container">
@@ -46,9 +48,9 @@
       <h2 class="font-1-l c13">3. Seguro Bikcraft</h2>
       <p>3.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitaremos PIX e Boleto através do PagSeguro.</p>
     </div>
-    
+
   </main>
-  
+
 
 
   <footer class="footer-bg">
@@ -64,18 +66,18 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="img/icones/redes sociais/Youtube.svg" alt="Youtube">
+            <img src="img/icones/redes-sociais/Youtube.svg" alt="Youtube">
           </a>
           <a href="./">
-            <img src="img/icones/redes sociais/Facebook.svg" alt="Facebook">
+            <img src="img/icones/redes-sociais/Facebook.svg" alt="Facebook">
           </a>
           <a href="./">
-            <img src="img/icones/redes sociais/Instagram.svg" alt="Instagram">
+            <img src="img/icones/redes-sociais/Instagram.svg" alt="Instagram">
           </a>
-  
+
         </div>
       </div>
-  
+
       <div class="footer-informacoes">
         <h3 class="font-2-l-b w">Informações</h3>
         <nav>
@@ -87,13 +89,14 @@
           </ul>
         </nav>
       </div>
-      <p class="footer-copy font-2-m c7">Bikcraft ©  Alguns Direitos Reservados</p>
+      <p class="footer-copy font-2-m c7">Bikcraft © Alguns Direitos Reservados</p>
     </div>
-  
+
   </footer>
 
 </body>
- 
- 
+
+
 <script src="js.js"></script>
+
 </html>
