--- a/Código/03 - bikcraft/contato.html
+++ b/Código/03 - bikcraft/contato.html
@@ -8,12 +8,13 @@
   <title>Contato | Bikcraft</title>
   <meta name="description" content="Entre em contato para melhores informações">
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
-  <link rel="preload" href="./css/style.css" as="style">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body id="contato">
@@ -66,7 +67,7 @@
 
       </section>
       <section class="contato-formulario" aria-label="Formulário">
-        <form class="form" action="./contato.html">
+        <form class="form" action="./enviar.php" method="post">
           <div>
             <label for="nome">Nome</label>
             <input type="text" id="nome" name="nome" placeholder="Seu nome">
@@ -79,13 +80,12 @@
 
           <div class="col-2">
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" placeholder="contato@email.com">
+            <input type="email" name="email" id="email" placeholder="contato@email.com" required aria-required="true">
           </div>
 
           <div class="col-2">
             <label for="mensagem">Mensagem</label>
-            <textarea name="mensagem" id="mensagem" rows="10" placeholder="O que você precisa?">
-              </textarea>
+            <textarea name="mensagem" id="mensagem" rows="10" placeholder="O que você precisa?"></textarea>
           </div>
 
           <button class="botao col-2">Enviar Mensagem</button>
@@ -174,9 +174,12 @@
 
   </footer>
 
+  <script src="./js/script.js"></script>
+  <script src="./js/formulario.js"></script>
 </body>
 
 
-<script src="js.js"></script>
+
+
 
 </html>
